# Maskinen-r-Project-2

./: README.md  unsuffled.txt
Project2/: CMakeLists.txt  GUI.c  GUI.cpp  GUI.h  commands.c  commands.h  game_display.c  game_display.h  game_state.h  main.c  structures.h
